@@ -23,8 +23,9 @@ import org.springframework.webflow.core.collection.LocalAttributeMap;
 import org.springframework.webflow.execution.RequestContext;
 
 import javax.servlet.http.Cookie;
-import java.util.Collections;
+
 import java.util.HashSet;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -127,7 +128,7 @@ public class LogoutActionTests extends AbstractWebflowActionsTests {
             .ticketGrantingTicket(new MockTicketGrantingTicket("casuser"))
             .build();
         logoutRequest.setStatus(LogoutRequestStatus.SUCCESS);
-        WebUtils.putLogoutRequests(this.requestContext, Collections.singletonList(logoutRequest));
+        WebUtils.putLogoutRequests(this.requestContext, List.of(logoutRequest));
         val properties = new LogoutProperties();
         this.logoutAction = new LogoutAction(getWebApplicationServiceFactory(), this.serviceManager, properties);
         val event = this.logoutAction.doExecute(this.requestContext);
@@ -142,7 +143,7 @@ public class LogoutActionTests extends AbstractWebflowActionsTests {
             .registeredService(RegisteredServiceTestUtils.getRegisteredService())
             .ticketGrantingTicket(new MockTicketGrantingTicket("casuser"))
             .build();
-        WebUtils.putLogoutRequests(this.requestContext, Collections.singletonList(logoutRequest));
+        WebUtils.putLogoutRequests(this.requestContext, List.of(logoutRequest));
         val properties = new LogoutProperties();
         this.logoutAction = new LogoutAction(getWebApplicationServiceFactory(), this.serviceManager, properties);
         val event = this.logoutAction.doExecute(this.requestContext);
